casual-event-service-log reopens log-file when signaled with SIGHUP
enables _log-rotations_

Also:
normalized all enum switch-cases to not have a `default:` so we get compiler
help when we miss to add cases. Unless the semantics dictate a `default`

--- a/middleware/event/makefile.cmk
+++ b/middleware/event/makefile.cmk
@@ -84,7 +84,10 @@ install_bin.append( target)
 	
 
 LinkUnittest( 'bin/test-casual-event',
-	[ Compile( 'unittest/source/test_dispatch.cpp')],
+	[ 
+      Compile( 'unittest/source/test_dispatch.cpp'),
+      Compile( 'unittest/source/service/test_log.cpp'),
+   ],
 	[
       lib_api,
 	   'casual-common',
