--- a/middleware/xatmi/makefile.cmk
+++ b/middleware/xatmi/makefile.cmk
@@ -24,7 +24,7 @@ lib_xatmi = LinkLibrary( 'bin/casual-xatmi',
       Compile( 'source/xatmi/executable.cpp'),
       Compile( 'source/xatmi/conversation.cpp'),
       Compile( 'source/xatmi/call.cpp'),
-      #Compile( 'source/xatmi/queue.cpp'),
+      Compile( 'source/xatmi/extended.cpp'),
       Compile( 'source/xatmi/internal/code.cpp'),
       Compile( 'source/xatmi/internal/log.cpp'),
       Compile( 'source/xa.cpp'),
