ipc improved message pump semantics
    generalized callbacks during _message pump_

    * prelude -  called once before the message pump starts
    * idle - called once every time the inbound device is 'idle'
    * done - called to ask if the pump should continue
    * error - called if there is an exception in flight.

    any combination can be used, including all and none of them. Order doesn't  matter.

A lot of refactoring.

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -43,7 +43,6 @@ manager_archive = LinkArchive( 'bin/casual-domain-manager',
     Compile( 'source/manager/handle.cpp'),
     Compile( 'source/manager/admin/server.cpp'),
     Compile( 'source/manager/configuration.cpp'),
-    Compile( 'source/manager/persistent.cpp'),
     Compile( 'source/transform.cpp'),
     Compile( 'source/manager/manager.cpp'),
 ])
@@ -136,6 +135,7 @@ domain_unittest_library = LinkLibrary( 'bin/casual-domain-unittest',
         Compile( 'source/manager/unittest/process.cpp'),
     ],
     [
+        common_archive,
         'casual-common',
         'casual-unittest',
     ]
