bug - range::adapter - did not handle empty ranges correctly
the cli --help was formatted incorrectly, don't believe it effected
anything else.

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -218,6 +218,7 @@ unittest_objectfiles = [
 
     Compile( 'unittest/source/test_environment.cpp'),
     Compile( 'unittest/source/environment/test_variable.cpp'),
+    Compile( 'unittest/source/environment/test_string.cpp'),
     
     Compile( 'unittest/source/network/test_byteorder.cpp'),
     
