--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -7,7 +7,7 @@ IncludePaths([
    '../common/include',
    '../xatmi/include',
    '../buffer/include',
-   '../serviceframework/include',
+   '../domain/include',
    '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
    ])
 
@@ -17,6 +17,8 @@ LibraryPaths([
     '../common/bin',
     '../buffer/bin',
     '../xatmi/bin',
+    '../domain/bin',
+    '../configuration/bin',
     '../serviceframework/bin',
     '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
     ])
@@ -67,22 +69,21 @@ target = LinkExecutable( 'bin/casual-http-outbound',
 
 install_bin.append( target)
 
-
-#
 # Unittest
-#
 LinkUnittest( 'unittest/bin/test-http',
    [
-    Compile( 'unittest/outbound/source/test_model.cpp'),
-    Compile( 'unittest/outbound/source/test_transcode.cpp'),
-    Compile( 'unittest/outbound/source/test_state.cpp'),
+    Compile( 'unittest/source/outbound/test_model.cpp'),
+    Compile( 'unittest/source/outbound/test_transcode.cpp'),
+    Compile( 'unittest/source/outbound/test_state.cpp'),
+    Compile( 'unittest/source/test_outbound.cpp'),
    ],
    [ 
       common_outbound_archive, 
       common_archive,
-      'casual-common', 
-      'casual-serviceframework', 
+      'casual-common',
+      'casual-domain-unittest',
       'casual-unittest',
+      'casual-xatmi',
       'curl'
    ])  
    
