--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -10,6 +10,7 @@ IncludePaths( [
     '../xatmi/include',
     '../transaction/include',
     '../domain/include',
+    '../service/include',
     '../../thirdparty/database/include',
     '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
 ])
@@ -24,6 +25,7 @@ LibraryPaths( [
     '../cli/bin',
     '../buffer/bin',
     '../domain/bin',
+    '../service/bin',
     '../xatmi/bin',
     '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
 ])
@@ -129,30 +131,16 @@ queue_c_api = LinkLibrary( 'bin/casual-queue-c-api',
 install_lib.append( queue_c_api)
 Install( 'include/casual/queue/c/queue.h', '$(CASUAL_HOME)/include/casual/queue/c/')
 
+# forward
+forward_server = LinkExecutable( 'bin/casual-queue-forward',
+[
+    Compile( 'source/forward/handle.cpp'),
+    Compile( 'source/forward/state.cpp'),
+    Compile( 'source/forward/main.cpp'),
+],
+[ common, 'casual-common', 'casual-buffer'])
 
-
-
-# Forwards
-
-forward_common = LinkArchive( 'bin/casual-queue-forward-common',
-    [
-       Compile( 'source/forward/common.cpp'),
-    ])
-
-forward_service = LinkExecutable( 'bin/casual-queue-forward-service',
-    [
-        Compile( 'source/forward/service.cpp'),
-    ],
-    [ forward_common, common, queue_api, 'casual-common', 'casual-buffer', 'casual-serviceframework'])
-
-forward_queue = LinkExecutable( 'bin/casual-queue-forward-queue',
-    [
-        Compile( 'source/forward/queue.cpp'),
-    ],
-    [ forward_common, common, queue_api, 'casual-common', 'casual-buffer'])
-
-install_bin.append( forward_service)
-install_bin.append( forward_queue)
+install_bin.append( forward_server)
 
 
 # Client
@@ -179,10 +167,11 @@ install_bin.append( target)
 
 test_casual_queue = LinkUnittest( 'unittest/bin/test-casual-queue', 
     [
-     Compile( 'unittest/source/test_transform.cpp'),
-     Compile( 'unittest/source/group/test_database.cpp'),
-     Compile( 'unittest/source/test_queue.cpp'),
-     Compile( 'unittest/source/api/test_c.cpp'),
+        Compile( 'unittest/source/test_transform.cpp'),
+        Compile( 'unittest/source/group/test_database.cpp'),
+        Compile( 'unittest/source/test_queue.cpp'),
+        Compile( 'unittest/source/api/test_c.cpp'),
+        Compile( 'unittest/source/test_forward.cpp')
     ],
     [
      group_archive,
@@ -195,13 +184,36 @@ test_casual_queue = LinkUnittest( 'unittest/bin/test-casual-queue',
      'casual-configuration',
      'sqlite3',
      'casual-unittest',
+     'casual-service-unittest',
      'casual-domain-unittest',
      'casual-xatmi',
      ]  
 )
 
 # Make sure the executables is linked before unittest
-Dependencies( test_casual_queue, [ queue_manager, queue_group])
+Dependencies( test_casual_queue, [ queue_manager, queue_group, forward_server])
+
+# Deprecated Forwards ! 
+
+forward_common = LinkArchive( 'bin/casual-queue-forward-common',
+    [
+       Compile( 'source/forward/deprecated/common.cpp'),
+    ])
+
+forward_service = LinkExecutable( 'bin/casual-queue-forward-service',
+    [
+        Compile( 'source/forward/deprecated/service.cpp'),
+    ],
+    [ forward_common, common, queue_api, 'casual-common', 'casual-buffer', 'casual-serviceframework'])
+
+forward_queue = LinkExecutable( 'bin/casual-queue-forward-queue',
+    [
+        Compile( 'source/forward/deprecated/queue.cpp'),
+    ],
+    [ forward_common, common, queue_api, 'casual-common', 'casual-buffer'])
+
+install_bin.append( forward_service)
+install_bin.append( forward_queue)
 
 
 
