update install script

--- a/console/client/package.json
+++ b/console/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
