xatmi - support for conversations
* Added some missing COBOL support. Mainly for TPSVCSTART and TPRETURN.
* Added mapping of event codes in TPRECV. Cobol API vaules are not the same as
  those in the C API.
* Setting of TPSVCDEV_REC->COMM_HANDLE in TPCONNECT() shall not be conditional
  on TPREPLY flag.
* Corrected prototype for TPFORWARD (routine is still a dummy! Not yest implemented
  in Cobol API).
* Added support for TPCONV flag in TPSVCSTART. There seems to be a bug in C API!
  The flag is not set by Casual when a conversational service is called with
  TPCONNECT/tpconnect().
* Changed TPSVCSTART to only set flags that are documented for API.
  In TPSVCSTART: worked around bug where Casual is not setting TPCONV.
  Flags for receive and send mode are not set properly in flags
  passed by Casual to service. Temporary hack.
* Some fixes to descriptor for conversational. Mainly having to do with
  "duplex" handling.
* Make caller tpsend work. Fixed reply.recording in response to connect.
* Fixed a small bug in Cobol api TPCONNECT.
* Fixed flags for 'transaction'
  Value 0 correspond to Cobol 88-variable TPNOTRAN being true.
  Setting 88-variable TPTRAN to true causes TPTRAN_FLAG to be 1, and
  incorrect setting of TPTRAN. C-api flag TPNOTRAN shall be set iff
  88-variable TPNOTRAN is set. C-api TPTRAN shall never be set in
  tpconnect call

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,15 @@ bin/
 
 /Default/
 /Release/
+
+#
+# Tag files produced by Global
+#
+GPATH
+GRTAGS
+GSYMS
+GTAGS
+#
+# Visual code workspace
+#
+*.code-workspace
