queue - reworked group and forward to be more rigid
A lot of refactoring, some of it to prepare forward and groups to be
able to handle runtime configuration.

model changed queue.forwards -> queue.forward.groups
To better express what it is, a group of forwards that is handled by one
process.

Symmetry to queue.groups

Approved-by: Hans  Bergkvist

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -9,6 +9,7 @@ IncludePaths([
    '../configuration/include',
    '../domain/include',
    '../service/include',
+   '../queue/include',
    '../xatmi/include',
    '../serviceframework/include',
    '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
