bug - queue-forward shall not handle new dequeue 'flows' in shutdown mode
We make it simple and just rollback dequeued messages that arrive when
we're in shutdown mode. To error prone to try to finish 'flows' that
starts during shutdown.

--- a/middleware/service/makefile.cmk
+++ b/middleware/service/makefile.cmk
@@ -114,7 +114,7 @@ install_headers += [
 
 service_unittest = LinkLibrary( 'bin/casual-service-unittest',
     [ 
-        Compile( 'source/unittest/advertise.cpp'),
+        Compile( 'source/unittest/utility.cpp'),
     ],
     [ 
         'casual-common', 
