removed dependency against cli

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -25,7 +25,6 @@ else:
 
 IncludePaths( [ 
     'include',
-    '../cli/include',
     '../xatmi/include',
     '$(CASUAL_THIRDPARTY)/pugixml/src',
     '$(CASUAL_THIRDPARTY)/rapidjson/include',
@@ -36,7 +35,6 @@ IncludePaths( [
 
 LibraryPaths( [
     'bin',
-    '../cli/bin',
     '$(CASUAL_THIRDPARTY)/pugixml/bin',
     '$(CASUAL_THIRDPARTY)/yaml-cpp/bin',
     ]
@@ -159,7 +157,7 @@ casual_common_objectfiles = [
 
 common = LinkLibrary( 'bin/casual-common', 
 	casual_common_objectfiles,
-	platform_specific_libs + [ 'yaml-cpp', 'pugixml', 'casual-cli'])
+	platform_specific_libs + [ 'yaml-cpp', 'pugixml'])
 
 install_libs.append( common)
 
