configuration - validate not empty values
gateway[.reverse].(inbound|outbound).groups[].connections[].address
queue.groups[].queues[].name

There are probably more values that does not make sense to not set, but
we start with these and add as needed.

Although an empty value is one invalid value of possible infinite
invalid values (at least conceptually), it indicates that the user
has done some unintentionally configuration error, and it might help the
user if casual gives empty values special treatment.

--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -70,7 +70,7 @@ LinkUnittest( 'bin/test-casual-configuration',
         Compile( 'unittest/source/resource/test_property.cpp'),
         Compile( 'unittest/source/build/test_server.cpp'),
         Compile( 'unittest/source/user/test_accumulate.cpp'),
-
+        Compile( 'unittest/source/user/test_validate.cpp'),
    ],
    [ 
        example_archive, 
