--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -58,6 +58,7 @@ unittest_object = [
    Compile( 'unittest/source/domain/test_gateway.cpp'),
    Compile( 'unittest/source/domain/gateway/test_reverse.cpp'),
    Compile( 'unittest/source/domain/test_service.cpp'),
+   Compile( 'unittest/source/domain/test_assassinate.cpp'),
 ]
 
 # only build http test cases if the enviornment is set up
