fix service cli - added timeout contract to cli output
Also, added queue cli legends for --list-forward-(group|services|queues)

--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -3,6 +3,7 @@ from casual.middleware.make.dsl import *
 IncludePaths( ['include',
    '../middleware/common/include',
    '../middleware/serviceframework/include',
+   '../middleware/configuration/include',
    '../middleware/domain/include',
    '../middleware/gateway/include',
    '../middleware/service/include',
