discovery - "install" libcasual-domain-discovery.so

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -142,6 +142,7 @@ domain_discovery_library = LinkLibrary( 'bin/casual-domain-discovery',
     ]
 )
 
+install_libs.append( domain_discovery_library)
 
 target = LinkLibrary( 'bin/casual-domain-discovery-admin-cli',
     [
